--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -94,11 +94,11 @@
 </script>
 {% endblock %}
 {% block title %}
-{{ experiment.status_line }}
+{{ experiment.pk }}
 {% endblock %}
 {% block page %}
 {{block.super}}
-<h3>{{experiment}}</h3>
+<h3>{{experiment.status_line}}</h3>
 <span>You are logged in as {{request.user.experimenter}}.</span>
 <hr/>
 <div id='experimenter-sidebar'>
