--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -32,6 +32,7 @@
                 break;
             }
         });
+        /*
         $('#forestry-form').submit(function() {
             var harvestDecisionValue = $('#harvest-decision-id').val();
             // FIXME: this isn't getting sent through properly before the submit occurs.  
@@ -39,8 +40,12 @@
             s.send(createSubmitEvent(harvestDecisionValue));
             return true;
         });
-        /*
+        */
         $('#submit').click(function() {
+            var harvestDecisionValue = $('#harvest-decision-id').val();
+            s.send(createSubmitEvent(harvestDecisionValue));
+            $('#submit').disable();
+            $('#submitDialog').dialog({modal: true});
             $(this).fastConfirm({
                 questionText: "Submit your harvest decision of " + harvestDecisionValue + "?",
                 onProceed: function(trigger) {
@@ -52,7 +57,6 @@
                 }
             });
         });
-        */
     });
 </script>
 {% endblock %}
@@ -89,6 +93,7 @@ Participating in {{experiment.status_line}}
 
 {% if max_harvest_decision > 0 %}
 <form id='forestry-form' action='' method='post'>
+    {% csrf_token %}
     <div class='field'>
         <label for='harvest-decision-id'>How many trees will you harvest this round? <br/>
             <span>Enter a number between 0 and {{ max_harvest_decision }}</span>:
