creating base mobile template and adding cookie ajax csrf support

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -13,6 +13,7 @@
         <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/jquery.qtip-1.0.0-rc3.min.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}js/jquery.cookies.2.2.0.min.js'></script>
         {% include "includes/jquery.ui.html" %}
         {% if debug_mode %}
         {% load dajaxice_templatetags %}
